# lar_testing

./: CONTRIBUTING.md  FDR_control  FDR_control.py  LICENSE.md  Law_LAR.ipynb  README.md  X_ATV.txt  X_IDV.txt  X_NFV.txt  X_RTV.txt  Y_IDV.txt  Y_NFV.txt  Y_RTV.txt  Y_SQV.txt  _config.yml  design.txt  multiple_spacing_tests.ipynb  multiple_spacing_tests.py  observation.txt  predictors_names_rtv.txt  predictors_names_sqv.txt  pyproject.toml
.ipynb_checkpoints/: Law_LAR-checkpoint.ipynb  multiple_spacing_tests-checkpoint.ipynb
data/: XAPV.csv  XATV.csv  XIDV.csv  XLPV.csv  XNFV.csv  XRTV.csv  XSQV.csv  X_LPV.txt  X_SQV.txt  Y_ATV.txt  Y_LPV.txt  code_R_to_generate_data.R  comparisons.txt  labelsAPV.RData  labelsATV.RData  labelsIDV.RData  labelsLPV.RData  labelsNFV.RData  labelsRTV.RData  labelsSQV.RData  predictors_names.txt  predictors_names_atv.txt  predictors_names_idv.txt  predictors_names_lpv.txt  predictors_names_nfv.txt  truelabels.RData  tsm_true.txt  yAPV.RData  yATV.RData  yIDV.RData  yLPV.RData  yNFV.RData  yRTV.RData  ySQV.RData
data/SLOPE/: slopeHIV-APV.csv  slopeHIV-ATV.csv  slopeHIV-IDV.csv  slopeHIV-LPV.csv  slopeHIV-NFV.csv  slopeHIV-RTV.csv  slopeHIV-SQV.csv  slopeHIV.R
lars/: BHAlgos.py  FCD.py  FDR.py  Knockoffs.py  LARS.py  __init__.py  multiple_spacing_tests.py
lars/LarsPath/: LarsPath.py  __init__.py
lars/Testing/: FDRControl.py  FalseNegativeTest.py  __init__.py
lars/Testing/StoppingTime/: StoppingTime.py  __init__.py
lars/Testing/VarianceEstimation/: VarianceEstimation.py  __init__.py
lars/pValues/: __init__.py  pValues.py
(+1 files in other folders)
