[tool.poetry]
name = "lar_testing"
version = "1.1"
description = "Python notebook on GtSt testing procedures on the LARS path. Code associated with the manuscript \"Multiple Testing and Variable Selection along Least Angle Regression's path\" (J.-M. Azaïs & Y. De Castro)"
authors = ["Y. De Castro and Q. Duchemin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pip = "^21.1.3"
cvxopt = "^1.2.6"
pyreadr = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
